Minor hover spacing fix

--- a/react-vite/src/components/ChannelPage/ChannelPage.css
+++ b/react-vite/src/components/ChannelPage/ChannelPage.css
@@ -1,5 +1,9 @@
 .hidden {
-    display: none
+    display: none;
+}
+
+.react-bar-hidden {
+    opacity: 0;
 }
 
 .channel-page-wrapper {
@@ -13,6 +17,8 @@
     width: 100%;
     padding-bottom: 20px;
     box-sizing: border-box;
+    box-shadow: 0px 0px 5px #999;
+    z-index: 10;
 }
 
 .channel-page-button-container {
